--- a/12/predicates.yaml
+++ b/12/predicates.yaml
@@ -18,8 +18,7 @@ links:
                         id:
                             desc: The resource location of the tag.
                             type: string
-                            hooks:
-                              - ns
+                            hooks: [ns]
                         expected:
                             desc: Whether this tag should be present on the damage type.
                             type: boolean
@@ -121,9 +120,7 @@ links:
                         link: nummm
             smokey:
                 desc: True if the block is closely above a campfire or soul campfire.
-                enum:
-                  - true
-                  - false
+                enum: [true, false]
                 unspec: true
     entity_preds:
         or:
@@ -151,15 +148,11 @@ links:
                         link: intmm
                     ambient:
                         desc: Whether the effect is from a beacon.
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                     visible:
                         desc: Whether the effect has visible particles.
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                 allow: '*a-z0-9#\/:.-'
             equipment:
@@ -183,29 +176,19 @@ links:
                 type: object
                 props:
                     is_on_fire:
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                     is_sneaking:
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                     is_sprinting:
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                     is_swimming:
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
                     is_baby:
-                        enum:
-                          - true
-                          - false
+                        enum: [true, false]
                         unspec: true
             nbt:
                 type: string
@@ -239,11 +222,7 @@ links:
                                     default: false
                         allow: '*a-z0-9#\/:.-'
                     gamemode:
-                        enum:
-                          - survival
-                          - adventure
-                          - creative
-                          - spectator
+                        enum: [survival, adventure, creative, spectator]
                         unspec: true
                     level:
                         desc: The experience level of the player.
@@ -477,11 +456,7 @@ links:
             props:
                 type:
                     desc: The type of this number provider. Keep in mind "score" is only available in 1.17+
-                    enum:
-                      - minecraft:constant
-                      - minecraft:uniform
-                      - minecraft:binomial
-                      - minecraft:score
+                    enum: [minecraft:constant, minecraft:uniform, minecraft:binomial, minecraft:score]
                     more:
                         string-minecraft:constant:
                             value:
@@ -507,9 +482,7 @@ links:
                                   - type: object
                                     props:
                                         type:
-                                            enum:
-                                              - fixed
-                                              - context
+                                            enum: [fixed, context]
                                             props:
                                                 string-fixed:
                                                     name:
@@ -517,11 +490,7 @@ links:
                                                         type: string
                                                 string-context:
                                                     target:
-                                                        enum:
-                                                          - this
-                                                          - killer
-                                                          - direct_killer
-                                                          - player_killer
+                                                        enum: [this, killer, direct_killer, player_killer]
                             score:
                                 desc: The scoreboard objective.
                                 type: string
@@ -536,11 +505,7 @@ links:
             props:
                 type:
                     desc: The type of this number provider. Keep in mind "score" is only available in 1.17+
-                    enum:
-                      - minecraft:constant
-                      - minecraft:uniform
-                      - minecraft:binomial
-                      - minecraft:score
+                    enum: [minecraft:constant, minecraft:uniform, minecraft:binomial, minecraft:score]
                     more:
                         string-minecraft:constant:
                             value:
@@ -569,9 +534,7 @@ links:
                                   - type: object
                                     props:
                                         type:
-                                            enum:
-                                              - fixed
-                                              - context
+                                            enum: [fixed, context]
                                             props:
                                                 string-fixed:
                                                     name:
@@ -579,11 +542,7 @@ links:
                                                         type: string
                                                 string-context:
                                                     target:
-                                                        enum:
-                                                          - this
-                                                          - killer
-                                                          - direct_killer
-                                                          - player_killer
+                                                        enum: [this, killer, direct_killer, player_killer]
                             score:
                                 desc: The scoreboard objective.
                                 type: string
@@ -658,20 +617,14 @@ links:
                     string-minecraft:entity_properties:
                         entity:
                             desc: Specifies the entity to check for the condition. Set to "this" to use the entity that died or the player that gained the advancement, opened the container or broke the block, "killer" for the killer, or "killer_player" for a killer that is a player.
-                            enum:
-                              - this
-                              - killer
-                              - killer_player
+                            enum: [this, killer, killer_player]
                         predicate:
                             desc: Predicate applied to entity, uses the same structure as advancements.
                             link: entity_pred
                     string-minecraft:entity_scores:
                         entity:
                             desc: Specifies the entity to check for the condition. Set to "this" to use the entity that died or the player that gained the advancement, opened the container or broke the block, "killer" for the killer, or "killer_player" for a killer that is a player.
-                            enum:
-                              - this
-                              - killer
-                              - killer_player
+                            enum: [this, killer, killer_player]
                         scores:
                             desc: Scores to check. All specified scores must pass for the condition to pass. Key name is the objective while the value is the exact score value or range of score values required for the condition to pass.
                             type: object
