--- a/12/damage_type.yaml
+++ b/12/damage_type.yaml
@@ -9,24 +9,12 @@ props:
         min: 0
     scaling:
         desc: Whether this damage type scales with difficulty.
-        enum:
-          - never
-          - when_caused_by_living_non_player
-          - always
+        enum: [never, when_caused_by_living_non_player, always]
     effects:
         href: https://minecraft.wiki/w/Damage_type#Effects
         desc: Optional field controlling how incoming damage is shown to the player.
-        enum:
-          - hurt
-          - thorns
-          - drowning
-          - burning
-          - poking
-          - freezing
+        enum: [hurt, thorns, drowning, burning, poking, freezing]
     death_message_type:
         href: https://minecraft.wiki/w/Damage_type#Death_messages
         desc: Optional field that controls the kind of death messages to use.
-        enum:
-          - default
-          - fall_variants
-          - intentional_game_design
+        enum: [default, fall_variants, intentional_game_design]
